clean up for release